Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4223

conf-sanity test_32c, test_32d: could not find any free loop device

XMLWordPrintable

    • 3
    • 11491

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/751ee23a-4106-11e3-a1e8-52540035b04c.

      The sub-test test_32c failed with the following error:

      test_32c failed with 1

      Info required for matching: conf-sanity 32c

            di.wang Di Wang (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: