LU-4223 utils: Use pclose to wait debugfs stop

1. In is_feature_enabled, it should use pclose
instead of fclose to close the file, to make sure
the file is being closed and loop device is being
released.

2. wait loop device to release before continue
conf-sanity 32c.

3. Add losetup -a to list loop dev information
when the test(conf-sanity 32) fails.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I0051de9b5a39d487fe34554c79773de4635178cc